--- a/index.html
+++ b/index.html
@@ -8,3 +8,9 @@
   </body>
 
 </html>
+
+<h1> Kerala, God's Own Country! </h1>
+<h2> It is the most beautiful state </h2>
+<h3> Malayalam is the local language </h3>
+<h4> Kerala is known for rivers </h4>
+<h5> Kathakali is a renowned art form </h5>
