--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 </html>
 
-<h1> Kerala, God's Own Country! </h1>
+<img src="https://avatars.githubusercontent.com/u/84160015?v=4">
+
 <h2> It is the most beautiful state </h2>
 <h3> Malayalam is the local language </h3>
 <h4> Kerala is known for rivers </h4>
