--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
         <title>My awesome web page</title>
     </head>
 
-  <body>
+  <creat a list>
     Hello there, awesome person! 
-  </body>
+  </create a list>
 
 </html>
 
