--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
+<ul>
+<li>
 <html>
     <head>
         <title>My awesome web page</title>
     </head>
 
-  <body>
+  <create a list>
     Hello there, awesome person! 
-  </body>
+  </create a list>
 
 </html>
+</li>
+<ul>
 
 <img src="https://avatars.githubusercontent.com/u/84160015?v=4">
 
