--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     Hello there, awesome person! 
-  </body>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 
 </html>
 </li>
