--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </li>
 <ul>
 
+<li><a href = "https://github.com/"> This is a
+link to GitHub!</a></li>
+
 <img src="https://avatars.githubusercontent.com/u/84160015?v=4">
 
 <h2> It is the most beautiful state </h2>
