--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <img src="https://avatars.githubusercontent.com/u/84160015?v=4">
 
+<li><a href="https://github.com/">This is a
+link to GitHub! </a></li>
+
 <h2> It is the most beautiful state </h2>
 <h3> Malayalam is the local language </h3>
 <h4> Kerala is known for rivers </h4>
