--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>My awesome web page</title>
     </head>
 
-  <body>
+  <create a list>
     Hello there, awesome person! 
       <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 
