--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <head>
         <title>My awesome web page</title>
     </head>
-
-  <body>
+   
+    <body>
+  <ol>
+     <li>This</li>
+      <li>Is an</li>
+      <li>ordered list</li>
+    </ol>
+    </body>
     Hello there, awesome person! 
       <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 
